# cortex-m-switch

./: Cargo.toml  build.rs
macros/: Cargo.toml
macros/src/: lib.rs
qemu_test/: Cargo.toml  openocd.gdb  qemu.gdb  qemu_debug.sh
src/: lib.rs  svc.rs  task.rs
