[package]
authors = ["Daan de Graaf <daandegraaf9@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cortex-m-switch-test"
version = "0.0.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
cortex-m-switch = { path = ".." }

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # symbols are nice and they don't increase the size on Flash
incremental = false     # incremental compilation and LTO do not mix
lto = true              # better optimizations
